--- a/login/package.json
+++ b/login/package.json
@@ -12,10 +12,11 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "@supabase/supabase-js": "^2.39.0"
+    "workbox-webpack-plugin": "^7.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
